baseline users similarity added

--- a/notebooks/subreddit_network.ipynb
+++ b/notebooks/subreddit_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -49,18 +49,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0373798504806\n",
-      "0.0120844811754\n",
-      "0.0120844811754\n",
-      "0.0120844811754\n",
-      "0.0120844811754\n",
-      "0.0784\n",
-      "0.0120844811754\n",
-      "0.0677764565993\n",
-      "0.0120844811754\n",
-      "0.167545710267\n",
-      "0.0373798504806\n",
-      "0.0373798504806\n"
+      "0.0188679245283\n",
+      "0.00606060606061\n",
+      "0.00606060606061\n",
+      "0.00606060606061\n",
+      "0.00606060606061\n",
+      "0.04\n",
+      "0.00606060606061\n",
+      "0.0344827586207\n",
+      "0.00606060606061\n",
+      "0.00105485232068\n",
+      "0.0188679245283\n",
+      "0.0188679245283\n"
      ]
     }
    ],
@@ -70,6 +70,63 @@
     "    if i > 10:\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = dict()\n",
+    "a.setdefault(0, set())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0].add(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
