users similarities updated

--- a/notebooks/subreddit_network.ipynb
+++ b/notebooks/subreddit_network.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users_similarity = rnu.calculate_users_similarity(\"../data/RC_2013-02\", maxsize=1e3)"
+    "users_similarity, users_common_e = rnu.calculate_users_similarity(\"../data/RC_2013-02\", maxsize=1e4)"
    ]
   },
   {
@@ -46,47 +46,55 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0188679245283\n",
-      "0.00606060606061\n",
-      "0.00606060606061\n",
-      "0.00606060606061\n",
-      "0.00606060606061\n",
-      "0.04\n",
-      "0.00606060606061\n",
-      "0.0344827586207\n",
-      "0.00606060606061\n",
-      "0.00105485232068\n",
-      "0.0188679245283\n",
-      "0.0188679245283\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, (us, sim) in enumerate(users_similarity.items()):\n",
-    "    print(sim)\n",
-    "    if i > 10:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "set()"
+       "0.8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "max_sim = -1\n",
+    "for i, (us, sim) in enumerate(users_similarity.items()):\n",
+    "    if sim > max_sim:\n",
+    "        max_sim = sim\n",
+    "max_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_sim = -1\n",
+    "for i, (us, sim) in enumerate(users_common_e.items()):\n",
+    "    if sim > max_sim:\n",
+    "        max_sim = sim\n",
+    "max_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a = dict()\n",
     "a.setdefault(0, set())"
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,20 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(a[0])"
    ]
@@ -130,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
