--- a/notebooks/opinion_divergence.ipynb
+++ b/notebooks/opinion_divergence.ipynb
@@ -35,6 +35,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nxg = augment_nodes(nxg, {}, community_detection=True)\n",
+    "with open(\"../snaps/reddit.json\", 'w') as f:\n",
+    "    json.dump(json_graph.node_link_data(nxg), f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": false
